--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "howler": "^2.2.4",
     "node-active-window": "^0.1.0",
     "robotjs": "^0.6.0",
-    "selenium-webdriver": "^4.18.1"
+    "selenium-webdriver": "^4.18.1",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
